YTI-701 Add URN validation for namespace

--- a/src/app/components/form/errorMessages.html
+++ b/src/app/components/form/errorMessages.html
@@ -4,6 +4,7 @@
     <li ng-message="url">{{'Invalid url error' | translate}}</li>
     <li ng-message="stem">{{'Invalid stem error' | translate}}</li>
     <li ng-message="namespace">{{'Invalid namespace error' | translate}}</li>
+    <li ng-message="namespaceUrlOrUrn">{{'Invalid namespace url urn error' | translate}}</li>
     <li ng-message="id">{{'Invalid id error' | translate}}</li>
     <li ng-message="existingId">{{'Existing id error' | translate}}</li>
     <li ng-message="required">{{'Required error' | translate}}</li>
