YTI-715 Extend the list of forbidden prefixes and change validator message text

--- a/src/app/components/form/errorMessages.html
+++ b/src/app/components/form/errorMessages.html
@@ -7,6 +7,7 @@
     <li ng-message="namespaceUrlOrUrn">{{'Invalid namespace url urn error' | translate}}</li>
     <li ng-message="id">{{'Invalid id error' | translate}}</li>
     <li ng-message="existingId">{{'Existing id error' | translate}}</li>
+    <li ng-message="existingOrReservedId">{{'Existing or reserved id error' | translate}}</li>
     <li ng-message="required">{{'Required error' | translate}}</li>
     <li ng-message="requiredLocalized">{{'Required localized error' | translate}}</li>
     <li ng-message="duplicate">{{'Duplicate error' | translate}}</li>
