Add IDs to buttons in namespace modals

--- a/src/app/components/model/searchNamespaceModal.html
+++ b/src/app/components/model/searchNamespaceModal.html
@@ -31,7 +31,7 @@
           </label>
         </div>
 
-        <button type="button" class="btn btn-action btn-md pull-right"
+        <button id="create_new_namespace_button" type="button" class="btn btn-action btn-md pull-right"
                 ng-click="$ctrl.createNew()">
           {{'Add new namespace' | translate}}
         </button>
