--- a/src/app/components/model/addEditNamespaceModal.html
+++ b/src/app/components/model/addEditNamespaceModal.html
@@ -47,8 +47,8 @@
   </div>
 
   <div class="modal-footer">
-    <button class="btn btn-action confirm" type="button" ng-click="$ctrl.create()" ng-disabled="!form.$valid">{{$ctrl.confirmLabel | translate}}</button>
-    <button class="btn btn-link cancel" type="button" ng-click="$ctrl.cancel()" translate>Cancel</button>
+    <button id="{{$ctrl.confirmButtonID}}" class="btn btn-action confirm" type="button" ng-click="$ctrl.create()" ng-disabled="!form.$valid">{{$ctrl.confirmLabel | translate}}</button>
+    <button id="add_edit_namespace_cancel_button" class="btn btn-link cancel" type="button" ng-click="$ctrl.cancel()" translate>Cancel</button>
     <error-panel error="$ctrl.submitError"></error-panel>
   </div>
 
