--- a/src/app/translations/misc.html
+++ b/src/app/translations/misc.html
@@ -299,3 +299,7 @@
 <div translate>Search</div>
 <div translate>All model types</div>
 <div translate>All use contexts</div>
+<div translate>Deep class hit</div>
+<div translate>Deep shape hit</div>
+<div translate>Deep attribute hit</div>
+<div translate>Deep association hit</div>
