YTI-714 Prevent using of same namespace more than once in same model

--- a/src/app/components/model/addEditNamespaceModal.html
+++ b/src/app/components/model/addEditNamespaceModal.html
@@ -24,6 +24,7 @@
                namespace-input
                active-namespace="$ctrl.namespaceToEdit"
                allow-technical="!$ctrl.edit"
+               used-namespaces="$ctrl.usedNamespaces"
                model="$ctrl.model"
                ng-model="$ctrl.namespace" />
       </div>
