--- a/src/app/components/model/modelForm.html
+++ b/src/app/components/model/modelForm.html
@@ -45,7 +45,8 @@
                               context="$ctrl.model"
                               allow-profiles="$ctrl.allowProfiles"
                               namespaces-in-use="$ctrl.namespacesInUse"
-                              model-prefix="$ctrl.model.prefix"></imported-namespaces-view>
+                              model-prefix="$ctrl.model.prefix"
+                              model-namespace="$ctrl.model.namespace"></imported-namespaces-view>
     <links-view value="$ctrl.model" context="$ctrl.model"></links-view>
   </div>
 
