YTI-729: Adding Comments application link to burger menu.

--- a/src/app/components/navigation/navigationBar.html
+++ b/src/app/components/navigation/navigationBar.html
@@ -80,6 +80,9 @@
         <a id="navigation_reference_data_link"
            class="dropdown-item"
            ng-href="{{$ctrl.codeListUrl}}" target="_blank" translate>Suomi.fi Reference Data</a>
+        <a id="navigation_comments_link"
+           class="dropdown-item"
+          ng-href="{{$ctrl.commentsUrl}}" target="_blank" translate>Suomi.fi Comments</a>
         <a id="navigation_groupmanagement_link"
            class="dropdown-item"
            ng-if="$ctrl.showGroupManagementLink()"
