Fix misleading (due to deep search) front page search hint.

--- a/src/app/components/frontPage.html
+++ b/src/app/components/frontPage.html
@@ -27,7 +27,7 @@
                ng-class="{'is-invalid': $ctrl.modelsSearchError}"
                type="text"
                ng-model="$ctrl.search"
-               placeholder="{{'Search term (model name)' | translate}}"/>
+               placeholder="{{'Search term' | translate}}"/>
       </div>
     </div>
     <div class="col-md-6 align-self-center d-flex align-items-center extend-search-selections">
