YTI-723 Hide Change concept button in Reusable predicate view

--- a/src/app/components/editor/propertyPredicateView.html
+++ b/src/app/components/editor/propertyPredicateView.html
@@ -28,7 +28,7 @@
     </div>
   </div>
 
-  <subject-view id="{{$ctrl.id + '_subject'}}" entity="$ctrl.predicate" model="$ctrl.model"></subject-view>
+  <subject-view id="{{$ctrl.id + '_subject'}}" entity="$ctrl.predicate" model="$ctrl.model" change-concept-disabled='true'></subject-view>
 
 </div>
 
