--- a/src/app/components/editor/subjectView.html
+++ b/src/app/components/editor/subjectView.html
@@ -1,7 +1,7 @@
 
 <div class="row">
   <div class="col-12">
-    <button ng-if="$ctrl.isEditing()"
+    <button ng-if="$ctrl.showChangeSubject()"
             id="{{$ctrl.id + '_change_concept_button'}}"
             type="button"
             class="btn btn-link pull-right"
