YTI-378 Show CC by 4.0 license icon and link text in footer

--- a/src/app/components/application.html
+++ b/src/app/components/application.html
@@ -4,8 +4,9 @@
     <breadcrumb></breadcrumb>
     <div ng-view></div>
   </div>
-
+  
   <app-footer [title]="'Data Vocabularies' | translate"
+              [show-license-icon]="true"
               (information-click)="$ctrl.navigateToInformation()"
               ng-if="$ctrl.showFooter"></app-footer>
 </ng-container>
