--- a/src/app/components/editor/searchClassTableModal.html
+++ b/src/app/components/editor/searchClassTableModal.html
@@ -49,7 +49,8 @@
                       search-controller="$ctrl"
                       type="class"
                       model="$ctrl.model"
-                      default-show="$ctrl.defaultToCurrentModel ? $ctrl.model : null"></model-filter>
+                      default-show="$ctrl.defaultToCurrentModel ? $ctrl.model : null"
+                      hide-this-model='$ctrl.showOnlyExternalClasses'></model-filter>
 
         <select id="class_information_domain_filter_dropdown"
                 class="form-control pull-left mr-2"
