YTI-808 Set table's header row fixed and make table modal more compact

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -214,6 +214,10 @@ visualization-view ajax-loading-indicator {
   }
 }
 
+.no-padding-bottom {
+  padding-bottom: 0;
+}
+
 .modal-body {
   .input-group-search {
     width: 400px;
@@ -238,6 +242,42 @@ visualization-view ajax-loading-indicator {
       }
     }
   }
+
+  &.full-height-table {
+    height: calc(100vh - 225px);
+    padding-bottom: 0;
+    padding-top: 0;
+    overflow-y: hidden;
+
+    .row.full-height {
+      height: calc(100% - 104px);
+
+      > div {
+        height: 100%;
+      }
+    }
+  }
+
+  .search-results-table {
+    height: 100%;
+
+    .search-result {
+      border-left: $active-indicator-width solid $white;
+      cursor: pointer;
+
+      &:hover, &.active {
+        border-left: $active-indicator-width solid $primary;
+      }
+
+      &.active {
+        background-color: $gray-200;
+      }
+
+      .glyph-icon {
+        color: $primary;
+      }
+    }
+  }
 }
 
 .modal-footer {
@@ -257,6 +297,70 @@ visualization-view ajax-loading-indicator {
   }
 }
 
+.table-container {
+  height: 100rem;
+
+  table {
+    display: flex;
+    flex-flow: column;
+    height: 100%;
+    width: 100%;
+    border: 0;
+  }
+
+  table thead {
+    /* head takes the height it requires,
+    and it's not scaled when table is resized */
+    flex: 0 0 auto;
+    width: calc(100% - 1.1em);
+  }
+
+  table tbody {
+    /* body takes all the remaining available space */
+    flex: 1 1 auto;
+    display: block;
+    overflow-y: scroll;
+  }
+
+  table tbody tr {
+    width: 100%;
+  }
+
+  table thead,
+  table tbody tr {
+    display: table;
+    table-layout: fixed;
+  }
+
+  table th {
+    border-top: 0;
+  }
+
+  table td {
+    border-top: 0;
+    border-bottom: 1px solid $gray-400;
+  }
+
+  .name-col {
+    width: 20%;
+  }
+
+  .model-col {
+    width: 20%;
+  }
+
+  .description-col {
+    width: 45%;
+  }
+
+  .modified-at-col {
+    width: 10%;
+  }
+
+  .menu-col {
+    width: 5%;
+  }
+}
 
 [float] {
   will-change: scroll-position;
