--- a/src/app/components/editor/searchClassTableModal.html
+++ b/src/app/components/editor/searchClassTableModal.html
@@ -1,6 +1,6 @@
 <form name="form" class="search-class">
 
-  <div class="modal-header">
+  <div class="modal-header no-padding-bottom">
     <h4 class="modal-title">
       <span ng-show="$ctrl.onlySelection" translate>Select class</span>
       <span ng-hide="$ctrl.onlySelection" translate>Add class</span>
@@ -10,7 +10,7 @@
     <a><i id="close_class_table_modal_button" ng-click="$dismiss('cancel')" class="fas fa-times"></i></a>
   </div>
 
-  <div class="modal-body full-height">
+  <div class="modal-body full-height-table">
     <div class="row mb-2">
       <div class="col-12">
 
@@ -124,45 +124,45 @@
 
         <div class="content-box">
 
-          <div class="search-results">
+          <div class="search-results-table table-container">
 
             <ajax-loading-indicator ng-if="$ctrl.loadingResults"></ajax-loading-indicator>
 
-            <table ng-if="!$ctrl.loadingResults" class="table" width="100%">
+            <table ng-if="!$ctrl.loadingResults" class="table table-sm" width="100%">
               <thead>
-              <tr>
-                <th style="width: 20%">
-                  <sort-by-column-header header-text="'Name'"
-                                         column-name="'name'"
-                                         model="$ctrl.model"
-                                         sort-by="$ctrl.sortBy"
-                                         filter-exclude="$ctrl.filterExclude"></sort-by-column-header>
-                </th>
-                <th style="width: 20%">
-                  <sort-by-column-header header-text="'Model'"
-                                         column-name="'model'"
-                                         model="$ctrl.model"
-                                         sort-by="$ctrl.sortBy"
-                                         filter-exclude="$ctrl.filterExclude"></sort-by-column-header>
-                </th>
-                <th style="width: 45%">
-                  <sort-by-column-header header-text="'Description'"
-                                         column-name="'description'"
-                                         model="$ctrl.model"
-                                         sort-by="$ctrl.sortBy"
-                                         filter-exclude="$ctrl.filterExclude"></sort-by-column-header>
-                </th>
-                <!-- Showing of super class is not implemented yet. -->
-                <!-- <th style="width: 20%" translate>Super class</th> -->
-                <th style="width: 10%">
-                  <sort-by-column-header header-text="'Modified at'"
-                                         column-name="'modifiedAt'"
-                                         model="$ctrl.model"
-                                         sort-by="$ctrl.sortBy"
-                                         filter-exclude="$ctrl.filterExclude"></sort-by-column-header>
-                </th>
-                <th style="width: 5%"></th>
-              </tr>
+                <tr>
+                  <th class="name-col">
+                    <sort-by-column-header header-text="'Name'"
+                                          column-name="'name'"
+                                          model="$ctrl.model"
+                                          sort-by="$ctrl.sortBy"
+                                          filter-exclude="$ctrl.filterExclude"></sort-by-column-header>
+                  </th>
+                  <th class="model-col">
+                    <sort-by-column-header header-text="'Model'"
+                                          column-name="'model'"
+                                          model="$ctrl.model"
+                                          sort-by="$ctrl.sortBy"
+                                          filter-exclude="$ctrl.filterExclude"></sort-by-column-header>
+                  </th>
+                  <th class="description-col">
+                    <sort-by-column-header header-text="'Description'"
+                                          column-name="'description'"
+                                          model="$ctrl.model"
+                                          sort-by="$ctrl.sortBy"
+                                          filter-exclude="$ctrl.filterExclude"></sort-by-column-header>
+                  </th>
+                  <!-- Showing of super class is not implemented yet. -->
+                  <!-- <th style="width: 20%" translate>Super class</th> -->
+                  <th class="modified-at-col">
+                    <sort-by-column-header header-text="'Modified at'"
+                                          column-name="'modifiedAt'"
+                                          model="$ctrl.model"
+                                          sort-by="$ctrl.sortBy"
+                                          filter-exclude="$ctrl.filterExclude"></sort-by-column-header>
+                  </th>
+                  <th class="menu-col"></th>
+                </tr>
               </thead>
               <tbody>
 
@@ -173,7 +173,7 @@
                     title="{{$ctrl.itemTitle(searchResult)}}"
                     key-control-selection>
 
-                  <td>
+                  <td class="name-col">
                     <div>
                       <ajax-loading-indicator-small ng-if="$ctrl.loadingSelection(searchResult)"></ajax-loading-indicator-small>
                       <highlight text="searchResult.label" context="$ctrl.model" search="$ctrl.searchText"></highlight>
@@ -183,7 +183,7 @@
                       <app-status [status]="searchResult.status"></app-status>
                     </div>
                   </td>
-                  <td>
+                  <td class="model-col">
                     <div>
                       <highlight text="searchResult.definedBy.label" context="$ctrl.model" search="$ctrl.searchText"></highlight>
                     </div>
@@ -198,7 +198,7 @@
                       </span>
                     </div>
                   </td>
-                  <td>
+                  <td class="description-col">
                     <highlight text="searchResult.comment" context="$ctrl.model" search="$ctrl.searchText"></highlight>
                   </td>
                   <!-- Showing of super class is not implemented yet. -->
@@ -207,10 +207,10 @@
                     {{$ctrl.model.linkToResource(searchResult.superClassOf)}}
                   </td>
                   -->
-                  <td>
+                  <td class="modified-at-col">
                     {{$ctrl.showItemValue(searchResult.modifiedAt)}}
                   </td>
-                  <td>
+                  <td class="menu-col">
                     <div class="pull-right" uib-dropdown>
                       <button id="{{'class_' + searchResult.id + '_actions_button'}}" class="btn btn-language dropdown-toggle" uib-dropdown-toggle>
                         <span>...</span>
